[package]
name = "wal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.3"
dialoguer = "0.9.0"
colored = "2"
css-color-parser = "*"